# stock-clusters

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-rmt-denoise-before-cluster.md  0001-single-linkage-default.md  0002-mantegna-metric.md  0002-shared-covariance-fairness.md  0003-gap-vs-phase-null.md  0003-shrunk-mu.md  0004-distance-formula.md  0004-honest-1overN-null.md  0005-k-selection-decision-rule.md  0005-purge-embargo.md  0006-dsr-multiplicity.md
src/stockclusters/: __init__.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  data.py  metrics.py  pipeline.py  plots.py
src/stockclusters/allocate/: __init__.py  hrp.py  ivp.py  markowitz_adapter.py  naive.py
src/stockclusters/allocation/: __init__.py  schemes.py
src/stockclusters/backtest/: __init__.py  costs.py  stats.py  walk_forward.py
src/stockclusters/cluster/: __init__.py  distance.py  linkage.py  quasidiag.py
src/stockclusters/clustering/: __init__.py  embedding.py  hierarchical.py  kmeans.py  selection.py
src/stockclusters/correlation/: __init__.py  distance.py  estimate.py  rmt.py
src/stockclusters/data_providers/: __init__.py  polygon.py
src/stockclusters/estimators/: __init__.py  covariance.py  mu.py  rmt.py
src/stockclusters/evaluation/: __init__.py  comparison.py  dsr.py  verdict.py
src/stockclusters/stability/: __init__.py  align.py  ari.py  resample.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_pipeline_placeholder.py
tests/parity/: test_clustering_oracles.py  test_dsr_ari_oracle.py  test_oracle_placeholder.py
tests/property/: test_clustering_properties.py  test_metric_axioms.py  test_stability_allocation.py
tests/regression/: test_honest_headline.py  test_rmt_ablation.py  test_verdict_honest_null.py
tests/unit/: test_backtest_stats.py  test_cli_smoke.py  test_correlation_clustering.py  test_covariance_estimators.py  test_data_io.py  test_data_layer.py  test_metrics.py  test_pipeline_unit.py  test_plots.py  test_polygon_io.py  test_smoke_api.py  test_stability_layer.py
