[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-clusters"
version = "0.1.0"
description = "Correlation clustering of equity universes (RMT-denoised, Mantegna distance) with an honest out-of-sample test of cluster-aware allocation vs naive 1/N."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FatihHekim0glu" }]
keywords = [
    "clustering",
    "correlation-clustering",
    "hierarchical-clustering",
    "random-matrix-theory",
    "diversification",
    "quantitative-finance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://fatihhekimoglu.com"
Repository = "https://github.com/FatihHekim0glu/stock-clusters"
Changelog = "https://github.com/FatihHekim0glu/stock-clusters/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Survivorship-aware + free data path (yfinance->stooq fallback, parquet/diskcache cache).
data = [
    "yfinance>=0.2.40",
    "curl_cffi>=0.7",
    "pyarrow>=15.0",
    "diskcache>=5.6",
    "pandas-datareader>=0.10",
    "httpx>=0.27",
]
# Plotly figure builders (figures serialize to {data, layout} JSON).
viz = [
    "plotly>=5.20",
    "kaleido>=0.2.1",
]
# Local interactive Streamlit demo (strictly decoupled from src/).
app = [
    "streamlit>=1.33",
    "typer>=0.12",
]
# Developer + parity-oracle + lint/type/test stack.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "scikit-learn>=1.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "typer>=0.12",
]
# Convenience aggregate of every runtime extra (NOT used by the lean API container).
all = [
    "yfinance>=0.2.40",
    "curl_cffi>=0.7",
    "pyarrow>=15.0",
    "diskcache>=5.6",
    "pandas-datareader>=0.10",
    "httpx>=0.27",
    "plotly>=5.20",
    "kaleido>=0.2.1",
    "streamlit>=1.33",
    "typer>=0.12",
]

[project.scripts]
stock-clusters = "stockclusters.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stockclusters"]

[tool.hatch.build.targets.sdist]
include = [
    "src/stockclusters",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
]
ignore = [
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # math-style names (T, N, Sigma) in tests

[tool.ruff.lint.pep8-naming]
# Math-style single-capital names (covariance Sigma, sample count T/N) are intentional,
# and ``sharpe_diff_vs_1overN`` is a frozen API response-field name (backend contract).
extend-ignore-names = ["N", "T", "Sigma", "Sigma_hat", "W", "D", "sharpe_diff_vs_1overN"]

# --------------------------------------------------------------------------- #
# mypy (strict)                                                               #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/stockclusters"]

# Documented pandas override: pandas-stubs is incomplete for some DataFrame
# operations; we accept untyped pandas internals at the boundary while keeping
# our own signatures strictly typed. (House convention: curated pandas suppression.)
[[tool.mypy.overrides]]
module = ["pandas.*"]
follow_imports = "skip"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "yfinance.*",
    "pandas_datareader.*",
    "curl_cffi.*",
    "plotly.*",
    "httpx.*",
    "typer.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast isolated unit tests",
    "property: Hypothesis property-based invariant tests",
    "parity: validation against an independent reference implementation",
    "regression: pinned-snapshot / locked-behaviour tests",
    "integration: end-to-end pipeline tests (may touch data/network)",
    "slow: long-running tests",
]

# --------------------------------------------------------------------------- #
# Coverage                                                                     #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["stockclusters"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
